force-app/main/default/objects/Apttus_Config2__ProductOptionGroup__c/Apttus_Config2__ProductOptionGroup__c.object-meta.xml
<CustomObject>
    <description>Represents a product option group which is a member of the list of option groups associated with a product.</description>
    <label>Product Option Group</label>
    <nameField>
        <displayFormat>PG-{0000000000}</displayFormat>
        <label>Option Group Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Option Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>