force-app/main/default/objects/Apttus_Config2__ProductOptionGroup__c/fields/Apttus_Config2__CascadeGroupChanges__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CascadeGroupChanges__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will represent the difference between Local and Global Option Group.</description>
    <label>CascadeGroupChanges</label>
    <type>Checkbox</type>
</CustomField>