force-app/main/default/objects/Apttus_Config2__ProductOptionGroup__c/fields/Apttus_Config2__DetailPage__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__DetailPage__c</fullName>
    <description>Detail Page URL content is displayed inside iframe</description>
    <inlineHelpText>Detail Page URL content to is displayed inside iframe</inlineHelpText>
    <label>Detail Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>