force-app/main/default/objects/Apttus_Config2__ProductOptionGroup__c/fields/Apttus_Config2__IsHidden__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IsHidden__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the options group is hidden in the page.</description>
    <inlineHelpText>Check this field to hide the option group and its components in the select options pages.</inlineHelpText>
    <label>Is Hidden</label>
    <type>Checkbox</type>
</CustomField>