force-app/main/default/objects/Apttus_Config2__ProductOptionGroup__c/fields/Apttus_Config2__IsLeaf__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IsLeaf__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the group in the hierarchy is a leaf group.</description>
    <label>Is Leaf</label>
    <type>Checkbox</type>
</CustomField>