force-app/main/default/objects/Apttus_Config2__ProductOptionGroup__c/fields/Apttus_Config2__IsPicklist__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IsPicklist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether to display the options as picklist values.</description>
    <inlineHelpText>When checked options within the options group will be displayed as picklist items</inlineHelpText>
    <label>Is Picklist</label>
    <type>Checkbox</type>
</CustomField>