force-app/main/default/objects/Apttus_Config2__ProductOptionGroup__c/fields/Apttus_Config2__Level__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Level__c</fullName>
    <description>The level in the option group hierarchy</description>
    <label>Level</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>