force-app/main/default/objects/Apttus_Config2__ProductOptionGroup__c/fields/Apttus_Config2__MaxTotalQuantity__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__MaxTotalQuantity__c</fullName>
    <description>The maximum total quantity of options that may be selected. A blank value indicates there is no limit.</description>
    <inlineHelpText>The maximum total quantity of options that may be selected. A blank value indicates there is no limit.</inlineHelpText>
    <label>Max Total Quantity</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>