force-app/main/default/objects/Apttus_Config2__ProductOptionGroup__c/fields/Apttus_Config2__MaxTotalQuantityExpressionId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__MaxTotalQuantityExpressionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Max Total Quantity Expression</label>
    <referenceTo>Apttus_Config2__FieldExpression__c</referenceTo>
    <relationshipLabel>Product Option Groups</relationshipLabel>
    <relationshipName>MaxTotalQuantityExpressionId</relationshipName>
    <type>Lookup</type>
</CustomField>