force-app/main/default/objects/Apttus_Config2__ProductOptionGroup__c/fields/Apttus_Config2__MinOptions__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__MinOptions__c</fullName>
    <defaultValue>1</defaultValue>
    <description>The minimum number of options that must be selected from the group. The number can be zero.</description>
    <label>Min Options</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>