force-app/main/default/objects/Apttus_Config2__ProductOptionGroup__c/fields/Apttus_Config2__MinTotalQuantity__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__MinTotalQuantity__c</fullName>
    <description>The minimum total quantity of options that must be selected. A blank value indicates there is no limit.</description>
    <inlineHelpText>The minimum total quantity of options that must be selected. A blank value indicates there is no limit.</inlineHelpText>
    <label>Min Total Quantity</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>