force-app/main/default/objects/Apttus_Config2__ProductOptionGroup__c/fields/Apttus_Config2__MinTotalQuantityExpressionId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__MinTotalQuantityExpressionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Min Total Quantity Expression</label>
    <referenceTo>Apttus_Config2__FieldExpression__c</referenceTo>
    <relationshipLabel>Product Option Groups (Min Total Quantity Expression)</relationshipLabel>
    <relationshipName>MinTotalQuantityExpressionId</relationshipName>
    <type>Lookup</type>
</CustomField>