force-app/main/default/objects/Apttus_Config2__ProductOptionGroup__c/fields/Apttus_Config2__ModifiableType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ModifiableType__c</fullName>
    <description>Indicates the type of modification allowed during selection. Variable indicates the option group and its components are modifiable and Fixed indicates the option group is not modifiable.</description>
    <label>Modifiable Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Variable</fullName>
                <default>true</default>
                <label>Variable</label>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>