force-app/main/default/objects/Apttus_Config2__ProductOptionGroup__c/fields/Apttus_Config2__OptionGroupId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__OptionGroupId__c</fullName>
    <description>ID of the associated classification</description>
    <label>Option Group</label>
    <referenceTo>Apttus_Config2__ClassificationHierarchy__c</referenceTo>
    <relationshipLabel>Offerings</relationshipLabel>
    <relationshipName>Offerings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>