force-app/main/default/objects/Apttus_Config2__ProductOptionGroup__c/fields/Apttus_Config2__ProductAttributeGroupMemberId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductAttributeGroupMemberId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product Attribute Group Member Id</description>
    <inlineHelpText>Product Attribute Group</inlineHelpText>
    <label>Product Attribute Group</label>
    <referenceTo>Apttus_Config2__ProductAttributeGroupMember__c</referenceTo>
    <relationshipLabel>Product Option Groups</relationshipLabel>
    <relationshipName>ProductOptionGroups</relationshipName>
    <type>Lookup</type>
</CustomField>