force-app/main/default/objects/Apttus_Config2__ProductOptionGroup__c/fields/Apttus_Config2__Right__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Right__c</fullName>
    <description>The right visitation sequence</description>
    <label>Right</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>