force-app/main/default/objects/Apttus_Config2__ProductOptionGroup__c/fields/Apttus_Config2__RootSequence__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RootSequence__c</fullName>
    <description>The root group sequence</description>
    <label>Root Sequence</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>